Adding hardscape & pond pic in place of the leaf clearing pic

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/bef-aftr_clearing_front-yard.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/hardscape-&-ponds.jpg" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -289,7 +289,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">leaf clearing a front yard</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">hardscaping & ponds</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -297,7 +297,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/bef-aftr_clearing_front-yard.jpg" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hardscape-&-ponds.jpg.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
