--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hardscape-&-ponds.jpg.jpg" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hardscape-&-ponds.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
