--- a/index.html
+++ b/index.html
@@ -41,34 +41,19 @@
         <p class="masthead-subheading font-weight-light mb-0">Creating Designs for Natural Spaces</p>
             <div class="bg-top">
             </div>
-            <div id="Oct2020carousel" class="carousel slide active" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="assets/img/Matt_hedging_cropped.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item ">
-                    <img class="d-block w-100" src="assets/img/matt-powerwashing2x_cropped.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/Nic-aerating.jpg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/Matt_aerating_cropped.jpg" alt="slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/grass4ground_truckBackgrnd.jpg" alt="slide">
-                  </div>
-
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5" src="assets/img/zeroTurn-mower-vector.svg" alt="" />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Landscaping & More</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
+                <!-- Masthead Subheading-->
+            </div>
         </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
@@ -472,10 +457,5 @@
                <!--  <script src="assets/mail/contact_me.js"></script> -->
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="js/scripts.js">
-        $('#Oct2020carousel').carousel({
-            interval: 4000
-
-        })</script>
     </body>
 </html>
