--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <img style="margin-right: 0.35vh;;height: 4rem;" class="navbar-brand" src="FlowerIcon_WhiteLtrs_Orange_Landscape.svg" alt="" />
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Landscape Science, LLC</a>
+                <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Landscape Science, LLC</a> -->
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
