Made changes for Master's Touch instead of Landscape Sciences

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Landscape Science, LLC | Creating Designs for Natural Spaces</title>
+        <title>Master's Touch Carpet Care | Dry Cleaning Carpets Since 1983</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -20,8 +20,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <img style="margin-right: 0.35vh;;height: 4rem;" class="navbar-brand" src="FlowerIcon-Orange_WhLtrs_Lands.svg" alt="" />
-                <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Landscape Science, LLC</a> -->
+                <img style="margin-right: 0.35vh;;height: 4rem;" class="navbar-brand" src="assets/img/landsci-logo.svg" alt="" />
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Master's Touch Carpet Care</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -37,43 +37,26 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead text-content text-center">
-        <p class="masthead-subheading font-weight-light mb-0" style="margin-top: -3rem;">Landscape Design, and Lawn Services for Central Virginia</p>
-        <p class="masthead-subheading font-weight-light mb-0">Creating Designs for Natural Spaces</p>
-            <!-- <div class="bg-top">
-            </div> -->
+        <p class="masthead-subheading font-weight-light mb-0" style="margin-top: -3rem;">Master's Touch Carpet Care - Dry Cleaning Carpets Since 1983</p>
+        <p class="masthead-subheading font-weight-light mb-0">Veteran Owned and Family Operated. Master's Touch Carpet Care services was established in 1983. Our specialty is dry cleaning carpets. We service Residential and Commercial buildings in the Richmond Area. Take a look at how we can service you today!</p>
+            <div class="bg-top">
+            </div>
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5" src="assets/img/zeroTurn-mower-vector.svg" alt="" />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Cleaning Services for Rugs, Carpets, Draperies and More</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+            </div>
         </header>
         <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio" style="padding: 0;">
-            <div id="oct2020carousel" style="margin: 0 3rem 3rem 3rem;" class="carousel slide active" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="assets/img/Matt_hedging_text.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item ">
-                    <img class="d-block w-100" src="assets/img/matt-powerwashing2x_text.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/Matt_aerating_text.jpg" alt="slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/Nic-aerating.jpg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/nic-ditch-witch_Text.jpg" alt="slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/img/grass4ground_truckBackgrnd.jpg" alt="slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#oct2020carousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#oct2020carousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
+        <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">See the Quality of Our Work</h2>
@@ -155,7 +138,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">In addition to landscaping and hardscaping, we do seeding, aeration, planting and mowing.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">We dry clean carpets, etc. for residential and commercial customers.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">Please contact us for estimates and quotes for service.
                         <a class="btn" style="background-color:#1abc9c; color:white;" href="https://www.instagram.com/landscapescience/?hl=en">Visit our Instagram Page!</a></p></div>
                 </div>
@@ -245,7 +228,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">Call Us</h4>
                         <p class="lead mb-0">
-                            @ 804-489-2836
+                            @ 804-334-4789
                         </p>
                     </div>
                 </div>
@@ -253,7 +236,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-content">
-            <div class="container"><small>Copyright ©2020 Landscape Science, LLC</small></div>
+            <div class="container"><small>Copyright ©2022 MASTER'S TOUCH CARPET CARE</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
@@ -282,7 +265,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/juniper-underlayment.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Beautiful redesign of an old landscape</p>
+                                    <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -316,7 +299,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hardscape-&-ponds.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Intricate hardscaping design and installation of sod to create a backyard paradise</p>
+                                    <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -384,7 +367,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hedging-bushes.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Laser straight hedge trimming maintenance with a touch of mulching.</p>
+                                    <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -418,7 +401,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/bef-aftr_clearing_2bush-bed.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Mulch beds made with river rocks edging made from scratch.</p>
+                                    <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -452,7 +435,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tree-clearing-felling.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Tree service to remove or trim dangerous, unsightly, and unkempt trees.</p>
+                                    <p class="mb-5">  ...  </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -474,10 +457,5 @@
                <!--  <script src="assets/mail/contact_me.js"></script> -->
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="js/scripts.js">
-        $('#Oct2020carousel').carousel({
-            interval: 4000
-
-        })</script>
     </body>
 </html>
