--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead text-content text-center">
-        <p class="masthead-subheading font-weight-light mb-0" style="margin-top: -3rem;">Master's Touch Carpet Care - Dry Cleaning Carpets Since 1983</p>
+        <p class="masthead-subheading font-weight-light mb-0" style="margin-top: -3rem;">- Master's Touch Carpet Care -</p>
         <p class="masthead-subheading font-weight-light mb-0">Veteran Owned and Family Operated. Master's Touch Carpet Care services was established in 1983. Our specialty is dry cleaning carpets. We service Residential and Commercial buildings in the Richmond Area. Take a look at how we can service you today!</p>
             <!-- <div class="bg-top">
             </div> -->
